--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
-  <h1>Malla Interactiva de Cursos</h1>
+  <h1>Malla Interactiva de Cursos de Derecho</h1>
+
   <div class="malla" id="malla"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
